src/objects/BR_Event__c.object
<CustomObject>
    <fields>
        <fullName>A_R_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/R Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>AC_Events3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>AC_Events2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advocate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BR_Events_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>BR_Events_Zone__c</referenceTo>
        <relationshipName>BR_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budgeted_Attendance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budgeted Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CME_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CME Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CME_Survey_Link__c</fullName>
        <label>CME Survey Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>Annual Meeting Affiliate</fullName>
                </value>
                <value>
                    <fullName>Annual Meeting Satellite Symposium</fullName>
                </value>
                <value>
                    <fullName>Special Conferences</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>Non-AACR</fullName>
                </value>
                <value>
                    <fullName>Table Top Exhibits</fullName>
                </value>
                <value>
                    <fullName>Think Tanks</fullName>
                </value>
                <value>
                    <fullName>Uncategorized</fullName>
                </value>
                <value>
                    <fullName>Workshops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Registration_URL__c</fullName>
        <label>Custom Registration URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Discloser_List__c</fullName>
        <externalId>true</externalId>
        <label>Discloser List</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclosure_Link__c</fullName>
        <description>link to disclosure form</description>
        <label>Disclosure Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Display_on_Confirmation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Confirmation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_on_Confirmation_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Confirmation Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_on_Landing_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Landing Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_on_Reminder_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Reminder(s) Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draft_Link__c</fullName>
        <formula>HYPERLINK( Draft_Program__c , &apos;here&apos;)</formula>
        <label>Draft Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Draft_Program__c</fullName>
        <label>Draft Program</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Event is not published.</inlineHelpText>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_registration_for_guests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable registration for guests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Preferences_Form_Fieldset__c</fullName>
        <label>Event Preferences Form Fieldset</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Stage__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                    <isActive>false</isActive>
                    <label>Live</label>
                </value>
                <value>
                    <fullName>Mock Live</fullName>
                    <isActive>false</isActive>
                    <label>Mock Live</label>
                </value>
                <value>
                    <fullName>Prerecorded</fullName>
                    <isActive>false</isActive>
                    <label>Prerecorded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Date_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Date/Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_attendees__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Hide attendees on event landing page.</inlineHelpText>
        <label>Hide attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_Segment_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ignore priority of the matching segments and show chipest ticket.</description>
        <inlineHelpText>Priority will be ignored and the lowest price will prevail.</inlineHelpText>
        <label>Ignore Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>AC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invite_Image_Id__c</fullName>
        <label>Invite Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_Message__c</fullName>
        <label>Invite Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JP_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CME Joint Providership Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Live Events</relationshipLabel>
        <relationshipName>AC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Joint_Providership_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Joint Providership Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Live Events (Joint Providership Institution)</relationshipLabel>
        <relationshipName>Live_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOI_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is letter of invitation button open in portal</description>
        <label>LOI Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOP_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOP Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_Invitation__c</fullName>
        <label>Letter of Invitation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Letter_Participation__c</fullName>
        <label>Letter of Participation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Limit_of_attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Zero means unlimited.</inlineHelpText>
        <label>Limit of attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Image_Filename__c</fullName>
        <label>List Image Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Main_Image_Filename__c</fullName>
        <label>Main Image Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_CME_Credits__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max CME Credits</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Sponsorship_Levels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Sponsorship Levels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Coupled Events</relationshipLabel>
        <relationshipName>Child_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform_Open_Time__c</fullName>
        <formula>IF ( DATEVALUE(Start_Date__c ) &gt;= DATE ( YEAR (DATEVALUE(Start_Date__c )),3,1)
+
(14- CASE( MOD(DATE ( YEAR (DATEVALUE(Start_Date__c )),3,1) - DATE (1900,1,7),7) ,0,7,MOD(DATE ( YEAR (DATEVALUE(Start_Date__c )),3,1) - DATE (1900,1,7),7)))

&amp;&amp;

DATEVALUE(Start_Date__c ) &lt; DATE(YEAR (DATEVALUE(Start_Date__c )),11,1) + (7- CASE( MOD(DATE ( YEAR (DATEVALUE(Start_Date__c )),11,1) - DATE (1900,1,7),7), 0,7,MOD(DATE ( YEAR (DATEVALUE(Start_Date__c )),11,1) - DATE (1900,1,7),7))),

IF( OR( VALUE( MID( TEXT( Start_Date__c - (4/24)-(30/1440) ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( Start_Date__c - (4/24)-(30/1440)), 12, 2 ) ) = 12 ), &quot;12&quot;,
TEXT( VALUE( MID( TEXT( Start_Date__c - (4/24)-(30/1440) ), 12, 2 ) ) -
IF( VALUE( MID( TEXT( Start_Date__c - (4/24)-(30/1440)), 12, 2 ) ) &lt; 12, 0, 12 ) ) )
&amp; &quot;:&quot; &amp;
MID( TEXT( Start_Date__c - (4/24)-(30/1440)), 15, 2 )&amp;
&quot; &quot; &amp;
IF( VALUE( MID( TEXT( Start_Date__c - (4/24) -(30/1440)), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; ),

IF( OR( VALUE( MID( TEXT( Start_Date__c - (5/24)-(30/1440) ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( Start_Date__c - (5/24)-(30/1440)), 12, 2 ) ) = 12 ), &quot;12&quot;,
TEXT( VALUE( MID( TEXT( Start_Date__c - (5/24)-(30/1440) ), 12, 2 ) ) -
IF( VALUE( MID( TEXT( Start_Date__c - (5/24)-(30/1440)), 12, 2 ) ) &lt; 12, 0, 12 ) ) ) &amp; &quot;:&quot; &amp;
MID( TEXT( Start_Date__c - (5/24)-(30/1440)), 15, 2 )&amp;
&quot; &quot; &amp;
IF( VALUE( MID( TEXT( Start_Date__c - (5/24)-(30/1440)), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; ))</formula>
        <label>Platform Open Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Event_Link__c</fullName>
        <formula>&apos;uat-aacr.cs195.force.com/LiveEventsList?ac__id=&apos; + Id</formula>
        <label>Portal Event Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_verify_myAACR_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires user to verify their info before being redirected to custom registration provider.</description>
        <label>Pre-verify myAACR Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publicly_available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Event is available for users to purchase tickets.</inlineHelpText>
        <label>Publicly available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund_Credit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund/Credit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>AC_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refunds_Open__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Refunds Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Confirmation_Message__c</fullName>
        <inlineHelpText>Used for registration confirmation email.</inlineHelpText>
        <label>Registration Confirmation Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Registration_Form_Fieldset__c</fullName>
        <label>Registration Form Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Form__c</fullName>
        <defaultValue>&quot;Basic&quot;</defaultValue>
        <label>Registration Form</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_Hours__c</fullName>
        <defaultValue>&quot;1;24;168;&quot;</defaultValue>
        <label>Reminder Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Message1__c</fullName>
        <description>Used for mail merge reminder email</description>
        <inlineHelpText>Used for mail merge reminder email</inlineHelpText>
        <label>First reminder message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reminder_Message2__c</fullName>
        <label>Second reminder message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reminder_Message3__c</fullName>
        <label>Third reminder message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reply_To__c</fullName>
        <description>Reply to email for speaker invitations</description>
        <label>Reply To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Confirmation_Email_Logos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Confirmation Email Logos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Confirmation_Page_Logos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Confirmation Page Logos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Joint_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Joint Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Landing_Page_Logos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Landing Page Logos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Pre_Post_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show pre/post doc fields on registration form</description>
        <label>Show Pre Post Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Reminder_Email_Logos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Reminder Email Logos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Workshop_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Workshop Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_1__c</fullName>
        <label>Signature 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_2__c</fullName>
        <label>Signature 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_3__c</fullName>
        <label>Signature 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Level_1__c</fullName>
        <label>Sponsorship Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Level_2__c</fullName>
        <label>Sponsorship Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Level_3__c</fullName>
        <label>Sponsorship Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <formula>IF ( DATEVALUE(Start_Date__c ) &gt;= DATE ( YEAR (DATEVALUE(Start_Date__c )),3,1)
+
(14- CASE( MOD(DATE ( YEAR (DATEVALUE(Start_Date__c )),3,1) - DATE (1900,1,7),7) ,0,7,MOD(DATE ( YEAR (DATEVALUE(Start_Date__c )),3,1) - DATE (1900,1,7),7)))

&amp;&amp;

DATEVALUE(Start_Date__c ) &lt; DATE(YEAR (DATEVALUE(Start_Date__c )),11,1) + (7- CASE( MOD(DATE ( YEAR (DATEVALUE(Start_Date__c )),11,1) - DATE (1900,1,7),7), 0,7,MOD(DATE ( YEAR (DATEVALUE(Start_Date__c )),11,1) - DATE (1900,1,7),7))),

IF( OR( VALUE( MID( TEXT( Start_Date__c  - (4/24) ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( Start_Date__c  - (4/24)), 12, 2 ) ) = 12 ), &quot;12&quot;, 
TEXT( VALUE( MID( TEXT( Start_Date__c  - (4/24) ), 12, 2 ) ) - 
IF( VALUE( MID( TEXT( Start_Date__c  - (4/24)), 12, 2 ) ) &lt; 12, 0, 12 ) ) )
 &amp; &quot;:&quot; &amp; 
MID( TEXT( Start_Date__c  - (4/24)), 15, 2 )&amp;
 &quot; &quot; &amp;
IF( VALUE( MID( TEXT( Start_Date__c  - (4/24)), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; ), 
 
IF( OR( VALUE( MID( TEXT( Start_Date__c  - (5/24) ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( Start_Date__c  - (5/24)), 12, 2 ) ) = 12 ), &quot;12&quot;, 
TEXT( VALUE( MID( TEXT( Start_Date__c  - (5/24) ), 12, 2 ) ) - 
IF( VALUE( MID( TEXT( Start_Date__c  - (5/24)), 12, 2 ) ) &lt; 12, 0, 12 ) ) ) &amp; &quot;:&quot; &amp; 
MID( TEXT( Start_Date__c  - (5/24)), 15, 2 )&amp;
 &quot; &quot; &amp;
IF( VALUE( MID( TEXT( Start_Date__c  - (5/24)), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; ))</formula>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Capacity__c</fullName>
        <label>Ticket Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Label__c</fullName>
        <label>Ticket Label</label>
        <length>73</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Purchase_Confirmation_Message__c</fullName>
        <description>Custom messaging for ticket purchase confirmation page.</description>
        <inlineHelpText>Custom messaging for ticket purchase confirmation page.</inlineHelpText>
        <label>Ticket Purchase Confirmation Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone to show to public</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+14:00) Line Is. Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:45) Chatham Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Phoenix Is. Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Tonga Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) New Zealand Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Chatham Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Is. Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Norfolk Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Lord Howe Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Australian Eastern Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Lord Howe Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Australian Central Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korea Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Japan Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Hong Kong Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Malaysia Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Philippines Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Singapore Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Australian Western Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) West Indonesia Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Myanmar Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Bangladesh Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Nepal Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unlisted_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Unlisted events will not appear in the portal for general purchase but will still be open for ticket sales.</inlineHelpText>
        <label>Unlisted Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <label>Venue Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_City__c</fullName>
        <label>Venue City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Country__c</fullName>
        <label>Venue Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <label>Venue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_State__c</fullName>
        <label>Venue State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Zip__c</fullName>
        <label>Venue Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Venue at which the event will take place</description>
        <label>Physical Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipName>AC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_Confirmation_Page_Horizontally__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Confirmation Page Horizontally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Landing_Page_Horizontally__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Landing Page Horizontally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Virtual Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipName>Virtual_ACEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Live Events</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Event_Stage__c</columns>
        <columns>Draft__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Portal_Event_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cancelled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cancelled Events</label>
    </listViews>
    <listViews>
        <fullName>Events_with_Virtual_Venue</fullName>
        <columns>NAME</columns>
        <columns>Event_Stage__c</columns>
        <columns>Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Virtual_Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Virtual_Venue__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Events with Virtual Venue</label>
    </listViews>
    <listViews>
        <fullName>Future_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Stage__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Virtual_Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Future Events</label>
    </listViews>
    <listViews>
        <fullName>Past_Events</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Past Events</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Events</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Draft__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Cancelled__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unpublished Events</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Events</pluralLabel>
    <recordTypes>
        <fullName>Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cancelled</fullName>
        <active>true</active>
        <description>Event has been cancelled</description>
        <label>Cancelled</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coupled</fullName>
        <active>false</active>
        <description>Child event record type</description>
        <label>Coupled</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_Validation</fullName>
        <active>true</active>
        <description>End date must always be after start date</description>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorMessage>The end date must be after the start of the event.</errorMessage>
    </validationRules>
</CustomObject>